[gd_scene load_steps=73 format=2]

[ext_resource path="res://Assets/Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Ladder.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 336, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 528, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 624, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 816, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 864, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 912, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1008, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1056, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1104, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1248, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1296, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1344, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1392, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 528, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 624, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 816, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 912, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1008, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1104, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1248, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1296, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1344, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1392, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "float",
"speed": 30.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "run",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.625, 39.5 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="SpriteFrames" id=65]
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "Wheel",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 12, 2.5 )

[sub_resource type="CapsuleShape2D" id=67]
radius = 2.0
height = 0.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.5 )
scale = Vector2( 1.75, 2.40625 )
frames = SubResource( 32 )
animation = "float"
frame = 7
speed_scale = 0.8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 4.625, 1 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 1 )
shape = SubResource( 1 )

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Ladder1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 57.5 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "2"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder1" groups=["ladder"]]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder1/AreaHitbox"]
shape = SubResource( 66 )

[node name="Ladder2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 94 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "3"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder2" groups=["ladder"]]
scale = Vector2( 0.95, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder2/AreaHitbox"]
position = Vector2( 0, 0.432438 )
shape = SubResource( 66 )

[node name="Ladder3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 130.5 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "4"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder3" groups=["ladder"]]
scale = Vector2( 0.9, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder3/AreaHitbox"]
shape = SubResource( 66 )

[node name="Ladder4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 167 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "5"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder4" groups=["ladder"]]
visible = false
scale = Vector2( 0.85, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder4/AreaHitbox"]
position = Vector2( 0, 16.8648 )
shape = SubResource( 67 )

[node name="Ladder5" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 203.5 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "6"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder5" groups=["ladder"]]
scale = Vector2( 0.8, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder5/AreaHitbox"]
position = Vector2( 0, 12.1081 )
shape = SubResource( 66 )

[node name="Ladder6" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 240 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "7"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder6" groups=["ladder"]]
scale = Vector2( 0.75, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder6/AreaHitbox"]
position = Vector2( 0, 15.1352 )
shape = SubResource( 66 )

[node name="Ladder7" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 276.5 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "8"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder7" groups=["ladder"]]
scale = Vector2( 0.7, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder7/AreaHitbox"]
position = Vector2( 0, 12.973 )
shape = SubResource( 66 )

[node name="Ladder8" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 314 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "9"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder8" groups=["ladder"]]
scale = Vector2( 0.65, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder8/AreaHitbox"]
position = Vector2( 0, 13.4054 )
shape = SubResource( 66 )

[node name="Ladder9" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 350.5 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "10"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder9" groups=["ladder"]]
scale = Vector2( 0.6, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder9/AreaHitbox"]
position = Vector2( 0, 19.027 )
shape = SubResource( 66 )

[node name="Ladder10" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 388 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "11"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder10" groups=["ladder"]]
scale = Vector2( 0.55, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder10/AreaHitbox"]
position = Vector2( 0, 22.9189 )
shape = SubResource( 66 )

[node name="Ladder11" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, 424.5 )
scale = Vector2( 1, 1.15 )
frames = SubResource( 65 )
animation = "Wheel"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": "12"
}

[node name="AreaHitbox" type="Area2D" parent="Ladder11" groups=["ladder"]]
scale = Vector2( 0.5, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder11/AreaHitbox"]
position = Vector2( 0, 25.946 )
shape = SubResource( 66 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="area_entered" from="Ladder1/AreaHitbox" to="Ladder1" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder1/AreaHitbox" to="Ladder1" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder2/AreaHitbox" to="Ladder2" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder2/AreaHitbox" to="Ladder2" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder3/AreaHitbox" to="Ladder3" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder3/AreaHitbox" to="Ladder3" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder4/AreaHitbox" to="Ladder4" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder4/AreaHitbox" to="Ladder4" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder5/AreaHitbox" to="Ladder5" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder5/AreaHitbox" to="Ladder5" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder6/AreaHitbox" to="Ladder6" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder6/AreaHitbox" to="Ladder6" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder7/AreaHitbox" to="Ladder7" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder7/AreaHitbox" to="Ladder7" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder8/AreaHitbox" to="Ladder8" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder8/AreaHitbox" to="Ladder8" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder9/AreaHitbox" to="Ladder9" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder9/AreaHitbox" to="Ladder9" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder10/AreaHitbox" to="Ladder10" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder10/AreaHitbox" to="Ladder10" method="_on_AreaHitbox_area_exited"]
[connection signal="area_entered" from="Ladder11/AreaHitbox" to="Ladder11" method="_on_AreaHitbox_area_entered"]
[connection signal="area_exited" from="Ladder11/AreaHitbox" to="Ladder11" method="_on_AreaHitbox_area_exited"]
